# pluralistic-rs

./: Cargo.toml  README.md
benches/: linear_qf.rs  votes.json
src/: lib.rs
