[package]
name = "pluralistic-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "pluralistic_rs"
path = "src/lib.rs"

[[bin]]
name = "pluralistic"
path = "src/main.rs"

[dependencies]
arr_macro = "0.2.1"
rand = "0.8.5"
criterion = "0.5.1"
serde = "1.0.193"
serde_json = "1.0.108"

[[bench]]
name = "linear_qf"
harness = false